<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.fragments.SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/edit_text_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/body" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_post"
            android:layout_width="234dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="42dp"
            android:backgroundTint="@color/blue"
            android:text="@string/post"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_put"
            android:layout_width="234dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="42dp"
            android:backgroundTint="@color/blue"
            android:text="@string/put"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_patch"
            android:layout_width="234dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="42dp"
            android:backgroundTint="@color/blue"
            android:text="@string/patch"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            android:layout_width="234dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="42dp"
            android:backgroundTint="@color/blue"
            android:text="@string/delete"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="234dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="42dp"
            android:backgroundTint="@color/gren"
            android:text="@string/back"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>


</FrameLayout>